--- a/src/main/webapp/pages/AddTeamPartial/AddTeamPartial.css
+++ b/src/main/webapp/pages/AddTeamPartial/AddTeamPartial.css
@@ -45,7 +45,7 @@ button.btn.btn-xs.btn-default {
     min-width: 98%;
 }
 .queue-discription1 {
-    min-width: 97%;
+    min-width: 98%;
 }
 
 .queue-Lending-limit {
